--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ body{
     width:70%;
     padding: 20px 40px 20px 20px ;
 }
-.contact_col form h2{
+.contact_col  h2{
     text-align: center;
     font-family: cursive;
 }
